[package]
name = "dinotty-quick-tunnel-supervisor"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.86"

[workspace]
members = ["crates/cloudflare-tunnel-core"]
resolver = "2"

[dependencies]
anyhow = "1"
atomicwrites = "0.4"
axum = { version = "0.7", features = ["ws", "macros"] }
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dinotty-cloudflare-tunnel-core = { path = "crates/cloudflare-tunnel-core" }
fs2 = "0.4"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
percent-encoding = "2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
